增加了注释

--- a/烟花.html
+++ b/烟花.html
@@ -44,7 +44,7 @@ canvas{display:block;}
 		//
 		listFire.push(fire);
 	}
-
+//oiuyt
 	function randColor() {
 		var r = Math.floor(Math.random() * 256);
 		var g = Math.floor(Math.random() * 256);
